BvvUtils.sampleRay: improve detection of saturated signal